tests/check/error_pb_with_anno.co
// RUN: not choreo %s 2>&1 | FileCheck %s

__co__ auto foo() {
  parallel by 2 {
    parallel by 4 : thread {}
  }
}


__co__ auto bar() {
  parallel by 2 : block {
    parallel by 4 {}
  }
}

__co__ auto baz() {
  parallel p by 3 : thread {
    parallel by 2 : block {}
  }

  parallel p by 3 : block {
    parallel by 4 : block {}
  }

  parallel p by 2 : block {
    parallel q by 4 : thread {}
  }
}

// CHECK: warning: For nested parallel-by, it is better to either explicitly specify all parallelism levels, or none (Choreo to automatically infer the levels).
// CHECK: warning: For nested parallel-by, it is better to either explicitly specify all parallelism levels, or none (Choreo to automatically infer the levels)
// CHECK: error: unable to infer the parallel-by level(s) between thread and block.
// CHECK: error: unable to infer the parallel-by level(s) between block and block.
// CHECK: Totally 2 errors have been detected.
